# ftpclient

./: .gitignore  client.py  pyproject.toml  test.py
src/abstracts/: command.py  factory.py
src/commands/: ftplib_command.py
src/config/: ftpconfig.py  ftptype.py
src/facade/: ftp.py
src/factories/: ftplib_factory.py
